# unisphere

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  packages.txt  unisphere.kdev4
apps/: CMakeLists.txt
apps/iplex/: CMakeLists.txt  hello.proto  main.cpp
apps/testbed/: CMakeLists.txt  main.cpp  scenarios.cpp  scenarios.hpp  tests.cpp
apps/ucompact/: CMakeLists.txt  main.cpp  scenarios.hpp  tests.cpp
apps/uembed/: CMakeLists.txt  main.cpp
apps/uover/: CMakeLists.txt  main.cpp
cmake/: FindBotan.cmake  FindCurveCPRASIO.cmake  FindMongoClient.cmake  FindProtobuf.cmake
data/: hyperboria-topology.gml  sybil_e100_n208.graphml  sybil_e120_n208.graphml  sybil_e140_n208.graphml  sybil_e160_n208.graphml  sybil_e180_n208.graphml  sybil_e60_n208.graphml  sybil_e80_n208.graphml  sybil_s112_n240.graphml  sybil_s128_n256.graphml  sybil_s144_n272.graphml  sybil_s160_n288.graphml  sybil_s16_n144.graphml  sybil_s32_n160.graphml  sybil_s48_n176.graphml  sybil_s64_n192.graphml  sybil_s80_n208.graphml  sybil_s96_n224.graphml  symmetric-topo-n1024.gephi  symmetric-topo-n1024.graphml  symmetric-topo-n128.gephi  symmetric-topo-n128.graphml  symmetric-topo-n16.gephi  symmetric-topo-n16.graphml  symmetric-topo-n256.gephi  symmetric-topo-n256.graphml  symmetric-topo-n32.gephi  symmetric-topo-n32.graphml  symmetric-topo-n50.gephi  symmetric-topo-n50.graphml  symmetric-topo-n512.gephi  symmetric-topo-n512.graphml  symmetric-topo-n64.gephi  symmetric-topo-n64.graphml
scenarios/: testbed.conf
scenarios/sample/: scenario.conf  scenario.model  scenario.route
src/: CMakeLists.txt
src/core/: CMakeLists.txt  blocking_queue.h  consumer_thread.h  context.cpp  context.h  exception.h  globals.h  hash_tuple.h  logger.cpp  logger.h  logging.h  message_cast.h  operators.h  program_options.cpp  program_options.h  serialize_tuple.h  signal.h
src/identity/: CMakeLists.txt  box_key.cpp  box_key.h  exceptions.h  key.h  node_identifier.cpp  node_identifier.h  peer_key.cpp  peer_key.h  sign_key.cpp  sign_key.h
src/interplex/: CMakeLists.txt  contact.cpp  contact.h  contact.proto  curvecp_linklet.cpp  curvecp_linklet.h  exceptions.h  host_introspector.cpp  host_introspector.h  interplex.proto  ip_linklet.cpp  ip_linklet.h  link.cpp  link.h  link_manager.cpp  link_manager.h  linklet.cpp  linklet.h  linklet_factory.cpp  linklet_factory.h  local_linklet.cpp  local_linklet.h  message.cpp  message.h  message_dispatcher.cpp  message_dispatcher.h  rpc_channel.cpp  rpc_channel.h
src/measure/: CMakeLists.txt  aggregate.cpp  aggregate.h  measure.cpp  measure.h
src/plexus/: CMakeLists.txt  bootstrap.cpp  bootstrap.h  core_methods.proto  plexus.proto  routed_message.cpp  routed_message.h  router.cpp  router.h  routing_table.cpp  routing_table.h  rpc.proto  rpc_engine.cpp  rpc_engine.h
src/rpc/: CMakeLists.txt  call.hpp  call_group.hpp  channel.hpp  engine.hpp  exceptions.cpp  exceptions.h  options.hpp  rpc.proto  service.hpp  service_fwd.hpp
src/social/: CMakeLists.txt  address.cpp  address.h  address.proto  compact_router.cpp  compact_router.h  core_methods.proto  exceptions.h  message_sniffer.cpp  message_sniffer.h  messages.proto  name_database.cpp  name_database.h  peer.cpp  peer.h  peer.proto  routed_message.cpp  routed_message.h  routing_table.cpp  routing_table.h  rpc_channel.cpp  rpc_channel.h  rpc_engine.cpp  rpc_engine.h  size_estimator.h  sloppy_group.cpp  sloppy_group.h  social_identity.cpp  social_identity.h  trust_network.h
src/social/profiling/: message_tracer.cpp  message_tracer.h
src/testbed/: CMakeLists.txt  data_collector.cpp  data_collector.h  dataset.cpp  dataset.h  dataset.hpp  exceptions.h  nodes.cpp  nodes.h  runner.cpp  runner.h  scenario.cpp  scenario.h  scenario_api.h  simulation.cpp  simulation.h  test_bed.cpp  test_bed.h  test_case.cpp  test_case.h  test_case_api.h  test_case_fwd.h
src/testbed/cluster/: controller.cpp  controller.h  master.cpp  master.h  messages.proto  node.cpp  node.h  partition.h  slave.cpp  slave.h  slave_descriptor.h  topology_loader.cpp  topology_loader.h
src/testbed/dataset/: csv.hpp  dataset.cpp  dataset.h  graphs.hpp  processor.cpp  processor.h  storage.cpp  storage.h
tests/: CMakeLists.txt  core.cpp  identity.cpp  plexus.cpp  social.cpp
tools/: bootstrap.sh  config.sh  deploy-scenario  draw-graph.py  draw-graphs.py  draw-graphs.sh  run-scenarios.py  run-scenarios.sh  settings.py
tools/prototyping/: generator.py  landmark_route.py  topologies.py
tools/testbed/: catalog.py  exceptions.py  plotter.py  runner.py
tools/testbed/cluster/: base.py  multihost.py  simple.py
tools/testbed/graphs/: __init__.py  availability_vs_attack_edges.py  base.py  degree_distribution.py  degree_vs_variable.py  deliverability_vs_attack_edges.py  deliverability_vs_variable.py  link_congestion.py  lr_length_distribution.py  lr_length_vs_variable.py  messaging_performance.py  overall_path_stretch_distribution.py  path_stretch.py  path_stretch_distribution.py  path_stretch_vs_variable.py  resolvability_vs_attack_edges.py  state_distribution.py  state_vs_size.py  sybil_scenarios.py  variable_distribution.py
tools/testbed/topologies/: generator.py  loader.py
